Fix for e-mail address overflow in Profile page

--- a/sites/basaar/static/shop/sass/main.scss
+++ b/sites/basaar/static/shop/sass/main.scss
@@ -162,6 +162,8 @@ footer {
             }
             td {
                 padding: 0.1em 1em;
+                word-wrap: break-word;
+                max-width: 300px;
             }
         }
     }
